packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/global-font/input.js
import React from 'react'
import { Inter } from '@next/font/google'

Inter({
  variant: '900',
})
